[package]
name = "prueba_tecnica"
version = "0.1.0"
edition = "2021"

[dependencies]
google-drive3 = "2.0.0+20210322"
yup-oauth2 = "5.0.3"
hyper = "0.14.31"
hyper-rustls = "0.22.0"
actix-web = "4"
actix-multipart = "0.4.0"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
actix-cors = "0.6"

[dev-dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"